--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
+/config/application.yml
 # Ignore SimpleCov coverage file
 /coverage
